# pinocchio-never-nonce

./: Cargo.toml  README.md
.github/actions/setup/: action.yml
.github/workflows/: main.yml
macro/: Cargo.toml
macro/src/: lib.rs
program/: Cargo.toml
program/src/: lib.rs
program/tests/: never_nonce.rs
