[workspace]
resolver = "2"
members = ["library", "program"]

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
]

[workspace.dependencies]
p-never-nonce = { path = "library" }
mollusk-svm = "0.12"
mollusk-svm-fuzz-fixture = "0.12"
pinocchio = "0.10"
