[package]
name = "p-never-nonce"
description = "Reject transactions that include an advance nonce instruction"
version = "0.0.0"
repository = "https://github.com/febo/pinocchio-nononce/"
license = "Apache-2.0"
edition = "2024"
readme = "../README.md"

[lib]
crate-type = ["rlib"]

[dependencies]
pinocchio = { workspace = true }
pinocchio-pubkey = "0.3"

[dev-dependencies]
strum = "0.27"
strum_macros = "0.27"