[package]
name = "pinocchio-never-nonce-program"
description = "A program failing if the first instruction on a transaction is an advance nonce"
version = "0.0.0"
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[lib]
name = "pinocchio_never_nonce_program"
crate-type = ["cdylib"]

[dependencies]
p-never-nonce = { workspace = true }
pinocchio = { workspace = true }

[dev-dependencies]
bincode = "1.3.3"
mollusk-svm = { workspace = true }
mollusk-svm-fuzz-fixture = { workspace = true }
p-never-nonce = { workspace = true, features = ["instruction"] }
solana-account = "3.4.0"
solana-hash = "4.0.1"
solana-instruction = "3.3.0"
solana-logger = "3.0.0"
solana-nonce = "3.1.0"
solana-program-error = "3.0.0"
solana-pubkey = { version = "4.0", features = ["curve25519"] }
solana-system-interface = { version = "3.1.0", features = ["bincode"] }
solana-sysvar = { version = "3.1.1", features = ["bincode"] }

[lints]
workspace = true
